--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "http-errors": "^1.8.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.22",
