--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.22",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^3.0.2"
   }
 }
