Phone registration, minor refactor
Implemented phone registration logic including OTP generation with speakeasy and saving to cache and to db

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.22",
     "morgan": "^1.10.0",
-    "redis": "^3.0.2"
+    "nexmo": "^2.8.0",
+    "redis": "^3.0.2",
+    "speakeasy": "^2.0.0"
   }
 }
