--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "nexmo": "^2.8.0",
     "redis": "^3.0.2",
+    "slugify": "^1.4.5",
     "speakeasy": "^2.0.0"
   }
 }
